--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "@babel/core": "^7.12.16",
     "@babel/preset-env": "^7.12.16",
+    "babelify": "^10.0.0",
     "browser-sync": "^2.26.14",
+    "browserify": "^17.0.0",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
@@ -19,8 +21,11 @@
     "gulp-sourcemaps": "^3.0.0",
     "gulp-svgstore": "^7.0.1",
     "gulp-twig": "^1.2.0",
+    "jquery": "^3.6.0",
     "node-sass": "^5.0.0",
-    "normalize-scss": "^7.0.1"
+    "normalize-scss": "^7.0.1",
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0"
   },
   "devDependencies": {},
   "scripts": {
@@ -28,5 +33,18 @@
     "build": "gulp build"
   },
   "author": "BerTepesh",
-  "license": "MIT"
+  "license": "MIT",
+  "browserslist": [
+    "> 1%",
+    "ie >= 8",
+    "edge >= 15",
+    "ie_mob >= 10",
+    "ff >= 45",
+    "chrome >= 45",
+    "safari >= 7",
+    "opera >= 23",
+    "ios >= 7",
+    "android >= 4",
+    "bb >= 10"
+  ]
 }
