--- a/package.json
+++ b/package.json
@@ -1,18 +1,12 @@
 {
-  "name": "project-start",
+  "name": "project-starter",
   "version": "1.0.0",
   "main": "gulpfile.js",
   "dependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/preset-env": "^7.12.16",
-    "babelify": "^10.0.0",
     "browser-sync": "^2.26.14",
-    "browserify": "^17.0.0",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
-    "gulp-babel": "^8.0.0",
-    "gulp-clean-css": "^4.3.0",
     "gulp-imagemin": "^7.1.0",
     "gulp-plumber": "^1.2.1",
     "gulp-rename": "^2.0.0",
@@ -22,10 +16,8 @@
     "gulp-svgstore": "^7.0.1",
     "gulp-twig": "^1.2.0",
     "jquery": "^3.6.0",
-    "node-sass": "^5.0.0",
     "normalize-scss": "^7.0.1",
-    "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "^2.0.0"
+    "webpack-stream": "^6.1.2"
   },
   "devDependencies": {},
   "scripts": {
