--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "viktor",
+  "name": "project-start",
   "version": "1.0.0",
   "main": "gulpfile.js",
   "dependencies": {
+    "@fancyapps/ui": "^4.0.0-alpha.4",
     "browser-sync": "^2.26.14",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
@@ -10,13 +11,14 @@
     "gulp-imagemin": "^7.1.0",
     "gulp-plumber": "^1.2.1",
     "gulp-rename": "^2.0.0",
-    "gulp-sass": "^4.1.0",
+    "gulp-sass": "^5.0.0",
     "gulp-shorthand": "^1.1.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-svgstore": "^7.0.1",
     "gulp-twig": "^1.2.0",
     "jquery": "^3.6.0",
     "normalize-scss": "^7.0.1",
+    "sass": "^1.36.0",
     "webpack-stream": "^6.1.2"
   },
   "devDependencies": {},
