--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "node-sass-tilde-importer": "^1.0.2",
     "normalize-scss": "^7.0.1",
     "sass": "^1.36.0",
+    "slick-carousel": "^1.8.1",
     "webpack-stream": "^6.1.2"
   },
   "devDependencies": {},
