--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "gulp-svgstore": "^7.0.1",
     "gulp-twig": "^1.2.0",
     "jquery": "^3.6.0",
-    "lazyload": "^2.0.0-rc.2",
+    "lazysizes": "^5.3.2",
     "node-sass-tilde-importer": "^1.0.2",
     "normalize-scss": "^7.0.1",
     "sass": "^1.36.0",
