--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
     "gulp-clean-css": "^4.3.0",
+    "gulp-html-minifier": "^0.1.8",
     "gulp-imagemin": "^7.1.0",
     "gulp-plumber": "^1.2.1",
+    "gulp-pretty-html": "^2.0.10",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.0.0",
     "gulp-shorthand": "^1.1.0",
