--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "gulp-svgstore": "^7.0.1",
     "gulp-twig": "^1.2.0",
     "jquery": "^3.6.0",
+    "jquery-app": "^1.5.0",
+    "jquery-plugin-generator": "^1.4.0",
     "lazysizes": "^5.3.2",
     "node-sass-tilde-importer": "^1.0.2",
     "normalize-scss": "^7.0.1",
