--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "jquery": "^3.6.0",
     "jquery-app": "^1.5.0",
     "jquery-plugin-generator": "^1.4.0",
+    "jquery.appear": "^1.0.1",
+    "jquery.transit": "^0.9.12",
     "lazysizes": "^5.3.2",
     "node-sass-tilde-importer": "^1.0.2",
     "normalize-scss": "^7.0.1",
