--- a/package.json
+++ b/package.json
@@ -4,6 +4,16 @@
   "main": "gulpfile.js",
   "dependencies": {
     "@fancyapps/ui": "^4.0.0-alpha.4",
+    "jquery": "^3.6.0",
+    "jquery-app": "^1.5.0",
+    "jquery-plugin-generator": "^1.4.0",
+    "jquery.appear": "^1.0.1",
+    "jquery.transit": "^0.9.12",
+    "lazysizes": "^5.3.2",
+    "slick-carousel": "^1.8.1",
+    "svg4everybody": "^2.1.9"
+  },
+  "devDependencies": {
     "browser-sync": "^2.26.14",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
@@ -18,20 +28,11 @@
     "gulp-sourcemaps": "^3.0.0",
     "gulp-svgstore": "^7.0.1",
     "gulp-twig": "^1.2.0",
-    "jquery": "^3.6.0",
-    "jquery-app": "^1.5.0",
-    "jquery-plugin-generator": "^1.4.0",
-    "jquery.appear": "^1.0.1",
-    "jquery.transit": "^0.9.12",
-    "lazysizes": "^5.3.2",
     "node-sass-tilde-importer": "^1.0.2",
     "normalize-scss": "^7.0.1",
     "sass": "^1.36.0",
-    "slick-carousel": "^1.8.1",
-    "svg4everybody": "^2.1.9",
     "webpack-stream": "^6.1.2"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "gulp start",
     "build": "gulp build"
