--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "jquery": "^3.6.0",
     "jquery-app": "^1.5.0",
     "jquery-plugin-generator": "^1.4.0",
+    "jquery-validation": "^1.19.3",
     "jquery.appear": "^1.0.1",
     "jquery.transit": "^0.9.12",
     "lazysizes": "^5.3.2",
